v0.5.7, 2016-10-?? -- ???
 * deprecated mrjob.parse.parse_*_list() functions
 * EMR and Hadoop runners:
   * can use environment variables and ~ in hadoop_streaming_jar option


v0.5.6, 2016-09-12 -- dataproc crash fix
 * Dataproc runner:
   * fix Hadoop version crash on unknown image version (#1428)
 * EMR and Hadoop runners:
   * prioritize task errors as probable cause of failure (#1429)
   * ignore Java stack trace in task stderr logs (#1430)

v0.5.5, 2016-09-05 -- missing ami_version option
 * EMR runner:
   * deprecate, don't remove ami_version option in v0.5.4 (#1421)
   * update memory/CPU stats for EC2 instances for pooling (#1414)
   * pooling treats application names as case-insensitive (#1417)

v0.5.4, 2016-08-26 -- pooling auto-recovery
 * jobs:
   * pass_through_option(), for existing command-line options (#1075)
     * MRJob.options.runner now defaults to None, not 'inline' or 'local'
 * runners:
   * all:
     * names of uploaded files now never start with . or _ (#1200)
   * Hadoop:
     * log parsing:
       * handles more log4j patterns (#1405)
       * gracefully handles IOError from exists() (#1355)
     * fixed crash bug in Hadoop FS on Python 3 (#1396)
   * EMR:
     * pooling auto-recovers from joining a cluster that self-terminated (#708)
     * log fetching uses sudo on 4.3.0+ AMIs (#1244)
     * fixed broken --ssh-bind-ports switch (#1402)
     * idle termination script now only runs on master node (#1398)
     * ssh tunnel connects to internal IP of resource manager (#1397)
     * AWS credentials no longer logged in verbose mode (#1353)
     * many option names are now more generic (#1247)
       * ami_version -> image_version
         * accidentally removed ami_version option entirely (fixed in v0.5.5)
       * aws_availability_zone -> zone
       * aws_region -> region
       * check_emr_status_every -> check_cluster_every
       * ec2_core_instance_bid_price -> core_instance_bid_price